--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "metigan",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Email sending library for the Metigan API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "prepublishOnly": "npm run build",
     "test": "jest",
-    "prepublishOnly": "npm run build"
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "email",
@@ -37,10 +39,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/frantchessico/metigan-lib.git"
+    "url": "https://github.com/metigan/metigan.git"
   },
   "bugs": {
-    "url": "https://github.com/frantchessico/metigan-lib/issues"
+    "url": "https://github.com/metigan/metigan/issues"
   },
-  "homepage": "https://github.com/frantchessico/metigan-lib#readme"
+  "homepage": "https://github.com/metigan/metigan#readme"
 }
