--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2018",
     "module": "CommonJS",
     "declaration": true,
+    "declarationMap": true,
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
@@ -16,12 +17,15 @@
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
     },
-    "types": ["node", "jest"],
-    "allowJs": true,
+    "types": ["node"],
+    "allowJs": false,
     "noImplicitAny": true,
     "noImplicitThis": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "importHelpers": true,
+    "noEmitHelpers": true,
+    "removeComments": false
   },
-  "include": ["src/**/*", "__tests__/**/*", "__tests__"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "__tests__", "examples"]
 }
